# Enterprise-Customer-360-Intelligence-Churn-Analytics-Platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
config/: model_config.yaml  settings.py
data/outputs/: .gitkeep
data/outputs/models/: best_model.joblib  model_metadata.json
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: README.md  deployment.md
logs/: .gitkeep
src/: __init__.py
src/analytics/: __init__.py  customer_health.py  kpi_engine.py  segmentation.py
src/core/: __init__.py  config_loader.py  exceptions.py  logger.py
src/dashboard/: __init__.py  app.py  components.py  data_service.py  design_system.py
src/dashboard/views/: __init__.py  about.py  churn_analytics.py  customer_360.py  customer_health.py  executive_view.py  explainable_ai.py  health_support.py  rfm_segmentation.py  segmentation.py  settings.py
src/data/: __init__.py  cleaning.py  ingestion.py  profiler.py  schema.py
src/features/: __init__.py  builder.py  rfm.py  transformers.py  validator.py
src/models/: __init__.py  explainer.py  predictor.py  trainer.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cleaning.py  test_config.py  test_dashboard_service.py  test_explainer.py
